# 3d-surfaces

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.h  GLProgram.h  Shader.h  SurfacePlotter.h
shaders/: fragmentShader.fs  vertexShader.vs  whiteFragmentShader.fs
src/: Camera.cpp  GLProgram.cpp  Shader.cpp  SurfacePlotter.cpp  main.cpp
